[package]
name = "iris-lib"
version = "0.1.0"
edition = "2021"
authors = ["Andrej G."]
license = "MIT"
description = "A library that creates color palettes from images using the median cut algorithm."
readme = "README.md"
homepage = "https://github.com/Kaesebrot84/iris-lib"
repository = "https://github.com/Kaesebrot84/iris-lib"
keywords = ["cli", "image", "color", "quantization"]
categories = ["algorithms"]

[dependencies]
image = { version = "0.24.3", optional = true }

[features]
image = ["dep:image"]


